@@ -3,6 +3,9 @@ plugins {
     id 'jacoco'
 }
 
+
+import io.koraframework.gradle.SonatypePublishTask
+
 if (hasProperty('buildScan')) {
     buildScan {
         termsOfServiceUrl = 'https://gradle.com/terms-of-service'
@@ -39,6 +42,9 @@ subprojects {
         options.compilerArgs << '-parameters' << '-XprintRounds'
         if (name == "compileJava" && !project.name.contains("internal")) {
             options.compilerArgs << '-Xlint:all' << '-Xlint:-serial,-processing,-missing-explicit-ctor'
+        }
+        if (name == "compileJava" && project.path == ":http:http-client-ok") {
+            options.compilerArgs << '--add-exports' << 'okhttp3/okhttp3.internal.http=kora.http.client.ok'
         }
     }
 }
@@ -145,9 +151,6 @@ def createPublishArchive = tasks.register("createPublishArchive", Zip) {
     getArchiveFile().set(rootProject.layout.buildDirectory.file('deployment.zip'))
     dependsOn(':maven-parent:publishMavenPublicationToBuildRepository')
 }
-
-
-import io.koraframework.gradle.SonatypePublishTask
 
 tasks.register('uploadPublishArchive', SonatypePublishTask) {
     dependsOn(createPublishArchive)
@@ -278,6 +281,8 @@ subprojects {
 
     test {
         jvmArgs([
+            "-XX:+TieredCompilation",
+            "-XX:TieredStopAtLevel=1",
             '-XX:FlightRecorderOptions=stackdepth=1024',
             '--enable-preview',
             '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
@@ -293,6 +298,9 @@ subprojects {
         useJUnitPlatform()
         testLogging {
             showStandardStreams(false)
+            showCauses(true)
+            showExceptions(true)
+            showStackTraces(true)
             events("passed", "skipped", "failed")
             exceptionFormat("full")
         }
